--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "tomify",
+  "name": "tomify-js",
   "version": "0.0.0",
   "description": "Provides support for paradigms commonly used in Tomify Applications",
-  "main": "lib/index.js",
+  "main": "lib/tomify.js",
+  "module": "src/tomify.js",
   "scripts": {
     "build": "webpack --progress",
     "dev": "webpack-dev-server --progress",
@@ -22,6 +23,12 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
