--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
+  "plugins": ["transform-react-jsx"],
   "presets": [
     ["env", {
       "targets": {
         "browsers": ["last 2 versions"]
       }
-    }]
+    }],
+    "react",
+    "stage-0"
   ]
 }
